# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  calc_game.py  calc_utils.py  even.py  even_game.py  game_data.py  game_engine.py  gcd.py  gcd_game.py  prime.py  progression.py  progression_utils.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_starter.py  games_mechanics.py
brain_games/utils/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc_utils.py  even_utils.py  game_data.py  gcd_utils.py  prime_utils.py  progression_utils.py  utils.py
