[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nickolay Kuzmin <nickolay.kuzmin2001@gmail.com>"]
packages = [
	{include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.game_starter:main"
brain-calc = "brain_games.scripts.game_starter:main"
brain-gcd = "brain_games.scripts.game_starter:main"
brain-progression = "brain_games.scripts.game_starter:main"
brain-prime = "brain_games.scripts.game_starter:main"